	- Nice new layout (Thomas Kjaer)
	- New option GalleryEXIFMode to control the way EXIF
	  info is displayed. See docs for details (Michael Legart)
	- Support for the FNumber EXIF value (Thomas Corell)
	- Added GalleryRootText option to allow changing the name of
	  the root element in the menu (Christopher Knight)
	- Use Image::Imlib2 instead of Inline::C (Andreas Plenser Jacobsen)

0.6 Tue Apr 22 10:24:40 CEST 2003

	- Apache now internally handles image dispatch which enables
	  use of all Apache caching possibilities (Thomas Eibner)
	- Documentation and better implementation of the .folder
	  feature. (Jesper Skriver)
	- Support the EXIF Orientation key for automatic rotate,
	  if your camera supports that - like Canon G3. You can
	  disable this by setting GalleryAutoRotate to 0 (Me)
	- Works with Inline > 0.42 (Andreas Plesner)
	- Show nice icons and allow downloads for doc,mp3,ogg,rtf,wav
	  and wmv in addition to the current movie types (Me)
	- Now displays nice values for Aperture,FocalLength,ShutterSpeed
	  exif values (Thomas Eibner) 
	- Directory comments added (Hans Joergensen)
	- New GallerySortBy option to allow sort by time, size etc (Iain Wade)
	- Set width/height on thumbnail images for better performance (Iain Wade) 

0.5.1 Sat Nov  9 11:49:29 CET 2002

	- InlineDir is no longer configurable using PerlSetVar, which
	  fixes make test. (Me)
	- Added test-suite (Me, Andreas Plesner Jacobsen)
	- Write to the error log if unable to open files in the cache (Me)
	- cache_dir changed to use File::Spec to make Apache::Gallery
	  more portable. It may even run under Windows now? (Andreas Plesner Jacobsen)

0.5 Sun Sep 15 11:55:56 CEST 2002

	- Added slideshow feature (Me)	
	- Code cleanup (Me)
	- Moved the cache to one single directory outside the webscope (Rene Joergensen)
	- Allow user to customize the "No info found" message (Me)

0.4.1 Sun Aug 11 17:48:09 CEST 2002

	- URI Escape image URL in the size selection URLs. (Me)